[package]
name = "cepler"
version = "0.0.12-dev"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bodymindarts/cepler"
description = "Concourse Environment Propagator"

[features]

fail-on-warnings = []

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger="0.7"
git2 = "0.13"
glob = "0.3.0"
handlebars = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"

[dev-dependencies]
stringreader = "0.1"
