[package]
name = "cepler"
version = "0.6.2"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bodymindarts/cepler"
description = "Concourse Environment Propagator"

[features]

fail-on-warnings = []

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger="0.7"
git2 = { version = "0.13", features = ["vendored-openssl"] }
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"

[dev-dependencies]
stringreader = "0.1"
